Adapt pinset to work with Epsilon Interim version

--- a/es.unican.istr.pinset.dt/plugin.xml
+++ b/es.unican.istr.pinset.dt/plugin.xml
@@ -45,5 +45,15 @@
             id="es.unican.istr.pinset.dt.wizards.NewPinsetFileWizard"
             name="Pinset File"/>
    </extension>
+   <extension
+         point="org.eclipse.epsilon.common.dt.moduleImplementation">
+      <implementation
+            class="es.unican.istr.pinset.PinsetModule"
+            default="false"
+            dialog="es.unican.istr.pinset.dt.launching.PinsetModuleConfiguration"
+            language="Pinset"
+            name="Pinset">
+      </implementation>
+   </extension>
 
 </plugin>
