Change file extension to .pinset

--- a/es.unican.istr.pinset.dt/plugin.xml
+++ b/es.unican.istr.pinset.dt/plugin.xml
@@ -7,7 +7,7 @@
             class="es.unican.istr.pinset.dt.editor.PinsetEditor"
             contributorClass="org.eclipse.ui.texteditor.BasicTextEditorActionContributor"
             default="true"
-            extensions="pset"
+            extensions="pinset"
             icon="icons/edl.png"
             id="es.unican.istr.pinset.dt.editor.PinsetEditor"
             name="Pinset Language Editor"/>
