--- a/es.unican.istr.pinset.engine/build.properties
+++ b/es.unican.istr.pinset.engine/build.properties
@@ -1,7 +1,5 @@
+source.. = src/
+output.. = bin/
 bin.includes = META-INF/,\
-               org.eclipse.epsilon.ecl.engine.jar,\
                src/,\
                epl-v10.html
-jars.compile.order = org.eclipse.epsilon.ecl.engine.jar
-source.org.eclipse.epsilon.ecl.engine.jar = src/
-output.org.eclipse.epsilon.ecl.engine.jar = bin/
